--- a/publico/estilo.css
+++ b/publico/estilo.css
@@ -5,13 +5,12 @@
   box-sizing: border-box;
 }
 
-
 body {
   font-family: Arial, sans-serif;
   color: #333;
 }
 
-main{
+main {
   min-height: 100vh;
 }
 
@@ -19,61 +18,114 @@ main{
   display: flex;
   column-gap: 24px;
   justify-content: center;
-  
 }
 
 footer {
   background-color: #333;
-  color: white;
+  color: #fff;
   text-align: center;
-  padding: 0;
+  padding: 10px 0;
   position: relative;
+  bottom: 0;
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 5px;
 }
 
-h2{
-text-align: center;
-padding-top: 50px;
-padding-bottom: 50px;
+footer p {
+  margin: 0;
+  font-size: 14px;
 }
 
-.pagina-sobre{
+h2 {
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.pagina-sobre {
   margin: 50px;
   text-align: justify;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 18px;
 }
 
-.botao-cadastrar{
-  margin-left: 20px;
+.botao-cadastrar {
+  margin-left: 30px;
   margin-right: 10px;
+}
+.alinhar-input {
+  padding: 400px;
+  padding-top: 0;
+}
+.botao-entrar {
+  margin-top: 40px;
+}
 
-}
-.alinhar-input{
-padding: 400px;
-padding-top: 0;
-}
-.botao-entrar{
-margin-top: 40px;
-}
-
-.check-box{
+.check-box {
   margin-top: 10px;
 }
 
-.campo-senha{
+.campo-senha {
   margin-top: 20px;
 }
 
-.botao-comprar{
-padding: 0;
-padding-top: 30px;
+.botao-comprar {
+  padding: 0;
+  padding-top: 30px;
 }
 
-.alinhar-detalhes{
+.alinhar-detalhes {
   padding: 100px;
   font-size: 19px;
   text-align: justify;
+}
+
+.imagens-pag-detalhes {
+  width: 500px;
+  margin: auto;
+  display: block;
+  border-radius: 4px;
+}
+
+.posicao-img {
+  width: 100%;
+
+}
+
+/* formulario de cadastro */
+.titulo {
+  color: #333;
+  padding-bottom: 50px;
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.alterar {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.alinhar {
+  padding-bottom: 5px;
+  margin: 0px;
+  margin-top: 20px;
+}
+
+.alinhar2 {
+  padding-bottom: 5px;
+  margin: 0px;
+}
+
+.botao {
+  margin-top: 30px;
+  padding-right: 0;
+}
+
+.label {
+  color: black;
+  font-weight: bold;
+}
+
+.cep {
+  padding-top: 16px;
 }
